fix: Add correct position to the right and left positioned header content on mobile devices Card: https://app.clickup.com/t/86bxbq08e

--- a/src/styles/elements/_header-content.css
+++ b/src/styles/elements/_header-content.css
@@ -86,12 +86,14 @@
 .header-content[horizontal-position="left"] {
     --header-content-left: var(--spacing-xxl);
     --header-content-translate-x: 0;
+    --header-content-width: calc(100% - calc(var(--header-content-left) * 2));
 }
 
 .header-content[horizontal-position="right"] {
     --header-content-left: unset;
     --header-content-right: var(--spacing-xxl);
     --header-content-translate-x: 0;
+    --header-content-width: calc(100% - calc(var(--header-content-right) * 2));
 }
 
 .header-content__title,
